--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "lucide-react": "^0.546.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-spinners": "^0.17.0",
+    "react-toastify": "^11.0.5",
     "tailwindcss": "^4.1.15"
   },
   "devDependencies": {
